Fix alignment for main page breadcrumbs

--- a/src/glados/static/scss/chembl-style.scss
+++ b/src/glados/static/scss/chembl-style.scss
@@ -1230,7 +1230,7 @@ div#global-footer img {
 /* medium and up screens */
 @media only screen and (min-width: 601px) {
   .main-container {
-    width: 96%;
+    width: 97.5%;
     max-width: none;
   }
 }
